added validation to email templates